--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "axios": "^0.27.2",
     "expo": "~46.0.8",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.4",
     "react": "18.0.0",
     "react-native": "0.69.4",
-    "react-native-screens": "~3.15.0",
-    "react-native-safe-area-context": "4.3.1"
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
