--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.4",
     "react": "18.0.0",
-    "react-native": "0.69.4",
+    "react-native": "^0.69.5",
+    "react-native-ionicons": "^4.6.5",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0"
   },
